<resources>
    <string name="app_name">Organizer</string>
    <string name="title_home">Home</string>
    <string name="title_locations">Locations</string>
    <string name="title_people">People</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="day_statement">Day statement</string>
    <string name="night_statement">Night statement</string>
    <string name="welcome_text">Let\'s complete your statement</string>
    <string name="saved_people">Previous persons</string>
    <string name="name">Name:</string>
    <string name="birthDate">Birthdate:</string>
</resources>