<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_locations"
        android:name="com.wikitech.organizer.presentation.locations.LocationsFragment"
        android:label="@string/title_locations"
        tools:layout="@layout/fragment_locations" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wikitech.organizer.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_people"
        android:name="com.wikitech.organizer.presentation.people.PersonsFragment"
        android:label="@string/title_people"
        tools:layout="@layout/fragment_people" />
</navigation>