<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="homeViewModel"
            type="com.wikitech.organizer.presentation.home.HomeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.home.HomeFragment">

        <TextView
            android:id="@+id/welcome_text"
            style="@style/TitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/welcome_text"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/day_statement_button"
            style="@style/RoundedButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginHorizontal="@dimen/button_margin_horizontal"
            android:layout_marginTop="@dimen/button_margin_top"
            android:onClick="@{(view) -> homeViewModel.onDayStatementButtonHit()}"
            android:text="@string/day_statement"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_text" />

        <Button
            android:id="@+id/night_statement_button"
            style="@style/RoundedButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginHorizontal="@dimen/button_margin_horizontal"
            android:layout_marginTop="@dimen/button_margin_top"
            android:gravity="center"
            android:onClick="@{(view) -> homeViewModel.onNightStatementButtonHit()}"
            android:text="@string/night_statement"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/day_statement_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>